# zcor_idl

./: .gitignore  NEXT_STEPS.md  README.md  RESULTS_SUMMARY.md  download_data.sh  evaluate.py  features.py  icd10_categories.py  icd9_categories.py  main.py  pfsa.py  plot_results.py  preprocess_cms.py  pyproject.toml  train.py  trinary_encoding.py
tests/: test_encoding.py  test_evaluate.py  test_features.py  test_icd10.py  test_icd10_categories.py  test_icd9.py  test_icd9_categories.py  test_pfsa.py  test_preprocess.py  test_train.py  test_train_three_split.py  test_trinary_encoding.py
zcor_idl/: __init__.py  encoding.py  evaluate.py  icd10.py  pfsa.py  plot.py  train.py
