[project]
name = "zcor-idl"
version = "0.1.0"
description = "ZCoR-ILD: Zero-burden Comorbidity Risk for Interstitial Lung Disease"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]

[project.scripts]
zcor-preprocess = "zcor_idl.preprocess:main"
zcor-train      = "zcor_idl.train:main"
zcor-evaluate   = "zcor_idl.evaluate:main"
zcor-plot       = "zcor_idl.plot:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]
